# snpe-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  entrypoint.sh
scripts/: printenv.sh
src/: dlcontainer.rs  lib.rs  model.rs  qairt.rs  qnn_backend.rs  snpe.rs
src/dlcontainer/: errors.rs
