[package]
name = "snpe"
version = "0.1.0"
edition = "2021"

[lib]
# We have to disable doctest because of bindgen, see
# https://users.rust-lang.org/t/disable-doc-tests-for-bindgen-module/54639
doctest = false

[build-dependencies]
reqwest = { version = "0.12.8", features = ["blocking"] }
bindgen = "0.70.1"
unzip = "0.1.0"

[dependencies]
libloading = "0.8.5"
num = "0.4.3"
semver = "1.0.23"
tensor-rs = "0.5.9"
thiserror = "1.0.64"
